--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "sudo pm2 start index.js --watch",
     "dev": "nodemon index"
   },
   "keywords": [],
